# txt2tex

./: .gitignore  .markdownlint-cli2.jsonc  BUGS.md  CHANGELOG.md  CLAUDE.md  COMPLETENESS.md  COVERAGE.md  DESIGN.md  DESIGN_ASSESSMENT.md  ERRORS_SNAPSHOT.md  FIX_PROGRESS.md  GARBLED_FIX_PLAN.md  IMPLEMENTATION_PLAN.md  INSTANCE_VAR_FIXES.md  ISSUE-PLAN.md  ISSUE-PROGRESS.json  ISSUES.md  KNOWN_LIMITATIONS.md  LICENSE  LIST_TYPE_FIXES.md  Makefile  NEXT_SESSION.md  PHASE10_DESIGN.md  PHASE10_PLAN.md  PHASE11B_PLAN.md  PHASE11_PLAN.md  PHASE5_SYNTAX.md  PYRIGHT_COMPLETE.md  PYRIGHT_SETUP.md  QA_CHECKS.md  QA_PLAN.md  README.md  RESTART_PROMPT.txt  SECURITY.md  SESSION.md  SOLUTION_COVERAGE.md  SOLUTION_STATUS.md  STATUS.md  TODO.md  TUTORIAL.md  (+35 more)
.claude/: settings.json  settings.local.json
.claude/agents/: adb.md  code-quality-enforcer.md  design-guardian.md  djb.md  documentation-guardian.md  ghr.md  jms.md  mdm.md  rmh.md
.ethos/: missions.jsonl
.github/: CODEOWNERS  ISSUES_TO_CREATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pr-comment.yml  quality.yml
.punt-labs/: ethos.yaml
.punt-labs/ethos/: .gitignore  missions.jsonl
docs/: DESIGN-ROADMAP.md  DESIGN.md  FEATURE_GAPS.md  FUZZ_FEATURE_GAPS.md  FUZZ_VS_STD_LATEX.md  GENDEF_RESEARCH.md  IDE_SETUP.md  PHASE1-PLAN.md  PROOF_SYNTAX.md  QA_CHECKS.md  QA_PLAN.md  REPORT_CLASS_ANALYSIS.md  RESERVED_WORDS.md  SESSION_RESUME_GENDEF_ADVANCED.md  SPACING_AUDIT.md  STATUS.md  TITLE_PAGE_ANALYSIS.md  USER_GUIDE.md  cheatsheet-common.tex  cheatsheet-dat.tex  cheatsheet-modelling.tex  cheatsheet-relational.tex  cheatsheet-sem-sbm.tex  cheatsheet.tex  complexity-report.json  complexity-report.md  reference.tex
docs/archive/: DOCUMENTATION_REORGANIZATION_PLAN.md  FEATURE_COMPARISON.md  MISSING_TESTS.md  NAMING_ANALYSIS.md  NAMING_IMPLEMENTATION_SUMMARY.md  QUANTIFIER_PARENTHESIZATION_PLAN.md  TEST_VALIDATION_REPORT.md  USER_GUIDE_TEST_MAPPING.md  VALIDATION_REPORT.md
docs/deferred/: user-defined-operators.md
docs/development/: AGENTS.md  ARGUE_INFRULE_PLAN.md  CODE_REVIEW.md  DEVELOPER.md  IDE_SETUP.md  KEYWORD_CLEANUP_REVISED.md  KEYWORD_DEPRECATION_CLEANUP.md  MIGRATION_GUIDE.md  NAMING_STANDARDS.md  QA_CHECKS.md  RESERVED_WORDS.md  STATUS.md  TEST_PLAN.md  TOOL-PyPI.md  judge-prompt.md  verification-procedure.md
docs/fuzz/: part5.txt
docs/guides/: FUZZ_FEATURE_GAPS.md  FUZZ_VS_STD_LATEX.md  GOTCHAS.md  MISSING_FEATURES.md  PROOF_SYNTAX.md  USER_GUIDE.md  ZED2E_ALIGNMENT_PLAN.md  ZED2E_COMPARISON.md
docs/plans/: PLAN_01_split_large_files.md  PLAN_02_dispatch_refactor.md  PLAN_03_exception_handling.md
docs/tutorials/: 00_getting_started.md  01_propositional_logic.md  02_predicate_logic.md  03_sets_and_types.md  04_proof_trees.md  05_z_definitions.md  06_relations.md  07_functions.md  08_sequences.md  09_schemas.md  10_advanced.md  11_relational_databases.md  12_schema_calculus.md  README.md
examples/: FIX_PROGRESS.md  Makefile  README.md  instructors_test.tex  oxsz10.tfm  oxsz5.tfm  oxsz6.tfm  oxsz7.tfm  oxsz9.tfm  phase0.tex  phase0_complex.txt  phase0_complex_demo.tex  phase0_complex_demo.txt  phase0_findings.md  phase0_no_parens.txt  phase0_simple.tex  phase0_simple.txt  phase0_solution3c.tex  phase0_solution3c.txt  phase0_solutions13.md  phase1.tex  phase1.txt  phase10a_relations.tex  phase10a_relations.txt  phase11_8_relational_image.tex  phase11_8_relational_image.txt  phase11_9.tex  phase11a.tex  phase11a.txt  phase11b.tex  phase11c.tex  phase11d.tex  phase12.tex  phase12.txt  phase12_simple.tex  phase12_simple.txt  phase17_demo.tex  phase17_proper.tex  phase17_proper.txt  phase18_demo.tex  (+63 more)
examples/00_getting_started/: README.md  basic_z_notation.tex  basic_z_notation.txt  decorated_identifiers.tex  decorated_identifiers.txt  first_proof.tex  first_proof.txt  hello_world.tex  hello_world.txt  string_literals.tex  string_literals.txt
examples/01_propositional_logic/: README.md  basic_operators.tex  (+9 more)
hw/: .latexmkrc  1.txt  Makefile  oxsz10.657pk  oxsz10.720pk  partial.tex  sem.bib  solutions.tex  solutions.txt  test1.tex  test2.tex  test3.tex  test_ampersand.tex  test_exact.tex  test_full.tex  test_infer.tex  test_mbox_math.tex  test_minimal2.tex  test_nested.tex  test_nombox.tex  test_super.tex  test_textfix.tex  zed-maths.sty  zed-proof.sty
latex/: test_pathc.tex  test_pathc.txt  test_proof.tex  zed-float.sty
scripts/: README.md  complexity_report.py  migrate_keywords.py  qa_check.sh  qa_check_all.sh  refactor_diff.py  refactor_diff_vs_ref.sh  rollback_migration.py  simple_keywords_test.tex  simple_keywords_test.txt  simple_keywords_test.txt.backup.20251126-081355  simple_keywords_test.txt.backup.20251126-081355.tex  test_migration_sample.txt  test_migration_sample.txt.backup.20251126-080345
sem/: baseline-dev.tex  baseline-prod.tex  full.diff  report-phase1.md  report-phase2.md  report-phase3.md  report-phase4-resolution.md  solutions-corrected-v2.tex  solutions-corrected-v2.txt  solutions-corrected-v3.tex  solutions-corrected-v3.txt  solutions-corrected.tex  solutions-corrected.txt
tests/: README.md  __init__.py  conftest.py  test_b_block.py  test_b_decoration.py  test_bag_diff.py  test_bib_parser.py  test_bug4_proof_label.py  test_bug5_o9_context.py  test_bug7_text_prose.py  test_bug7e_text_dollar_backslash.py  test_bug7f_text_colon.py  test_bullet_vs_projection.py  test_cli.py  test_cross_product_nesting.py  test_cross_product_parens.py  test_e2e_regression.py  test_error_formatting.py  test_explicit_parentheses.py  test_extend_aggregate.py  test_free_vars.py  test_generic_instantiation.py  test_group_aggregators.py  test_group_no_spurious_linebreak.py  test_infrule.py  test_inline_math.py  test_inline_math_simple.py  test_katex_gen.py  test_lambda_paren_wrap.py  test_latex_gen.py  test_latex_gen_coverage.py  test_latex_gen_errors.py  test_latex_gen_more_coverage.py  test_lnot_paren.py  test_multiline_latex.py  test_named_field_projection.py  test_nested_braces.py  test_nested_quantifiers.py  test_overflow_warnings.py  test_parser_edge_cases.py  (+42 more)
(+651 files in other folders)
