[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "txt2tex"
version = "0.1.0"
description = "Convert whiteboard-style mathematical notation to high-quality LaTeX"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "JF", email = "jmf@pobox.com" },
]
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.13.0",
    "mypy>=1.18.1",
    "pyright>=1.1.0",
    "pytest>=8.4.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/txt2tex"]

[tool.hatch.envs.default]
dependencies = [
    "ruff>=0.13.0",
    "mypy>=1.18.1",
    "pyright>=1.1.0",
    "pytest>=8.4.2",
    "pytest-cov>=4.0.0",
]

[tool.hatch.envs.default.scripts]
test = "PYTHONPATH=src pytest {args:tests}"
test-cov = "PYTHONPATH=src pytest --cov=src/txt2tex --cov-report=term-missing --cov-report=html {args:tests}"
# Phase-specific test targets
test-phase3 = "PYTHONPATH=src pytest tests/test_phase3.py -v"
test-phase4 = "PYTHONPATH=src pytest tests/test_phase4.py -v"
test-phase5 = "PYTHONPATH=src pytest tests/test_phase5.py -v"
test-phase6 = "PYTHONPATH=src pytest tests/test_phase6.py -v"
test-phase7 = "PYTHONPATH=src pytest tests/test_phase7.py -v"
lint = "ruff check ."
format = "ruff format ."
format-check = "ruff format --check ."
type = "mypy src/txt2tex tests"
type-quick = "mypy"
type-pyright = "pyright"
type-pyright-stats = "pyright --stats"
type-all = ["type", "type-pyright"]
check = ["lint", "type", "test"]
check-cov = ["lint", "type", "test-cov"]
check-all = ["lint", "type", "type-pyright", "test"]
# CLI wrapper - use for generating LaTeX
cli = "PYTHONPATH=src python -m txt2tex.cli {args}"
# Full pipeline - use for txt -> tex -> pdf
convert = "./txt2pdf.sh {args}"
# QA check - single PDF
qa-check = "./qa_check.sh {args:examples/solutions.pdf}"
# QA check - all PDFs in hw/ and examples/
qa-check-all = "./qa_check_all.sh"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "RUF", # Ruff-specific rules
]
extend-select = ["PLC0415"]

ignore = [
    "TC001",  # Move import into TYPE_CHECKING - too aggressive for runtime imports
    "TC003",  # Move standard lib import into TYPE_CHECKING - unnecessary overhead
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2

[tool.ruff.lint.isort]
known-first-party = ["txt2tex"]
combine-as-imports = true
